--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -1,22 +1,8 @@
-
 skillMetadata:
   sections:
-    - name: Options << Name of section
+    - name: Hardware
       fields:
-        - name: internal_python_variable_name
-          type: text
-          label: Setting Friendly Display Name
-          value: ""
-          placeholder: demo prompt in the input box
-    - name: Login << Name of another section
-      fields:
-        - type: label
-          label: Just a little bit of extra info for the user to understand following settings
-        - name: username
-          type: text
-          label: Username
-          value: ""
-        - name: password
-          type: password
-          label: Password
-          value: ""
+        - name: gpio_port
+          type: number
+          label: GPIO Port
+          value: 17
